--- a/styles.css
+++ b/styles.css
@@ -966,6 +966,22 @@ span .mcloseBtn {
   padding: 12px 24px 0 12px;
 }
 
+#overlay {
+  position: fixed;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #c1c7d0;
+  pointer-events: none;
+}
+
+#overlay.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
 @media screen and (min-width: 768px) {
   .navigation {
     display: none;
