--- a/styles.css
+++ b/styles.css
@@ -840,8 +840,7 @@ hr {
 .mcloseBtn {
   cursor: pointer;
   font-size: 30px;
-
-  /* color: fff; */
+  color: white;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -850,8 +849,8 @@ hr {
   position: absolute;
   width: 24px;
   height: 24px;
-  right: 24px;
-  margin-top: 20px;
+  right: 17px;
+  margin-top: 7px;
   border-radius: 0;
 }
 
@@ -885,7 +884,7 @@ span .mcloseBtn {
   gap: 12px;
   list-style: none;
   padding: 0 24px 0 24px;
-  width: 246px;
+  width: 300px;
   height: 32px;
 }
 
@@ -893,7 +892,7 @@ span .mcloseBtn {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 77px;
+  width: 87px;
   height: 32px;
   justify-content: center;
   background: #ebecf0;
@@ -939,6 +938,7 @@ span .mcloseBtn {
   background-position: right;
   margin-left: 24px;
   padding: 12px 24px 0 12px;
+  background-size: 16px;
 }
 
 .mseesource {
@@ -966,14 +966,26 @@ span .mcloseBtn {
   padding: 12px 24px 0 12px;
 }
 
+#overlay {
+  position: fixed;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  background: #c1c7d0;
+  pointer-events: none;
+  width: 1440px;
+  height: 100%;
+}
+
+#overlay.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
 @media screen and (min-width: 768px) {
   .navigation {
     display: none;
   }
-
-  /* .primary-headline {
-    display: none;
-  } */
 
   .hidden-menu {
     display: none;
@@ -1321,22 +1333,36 @@ span .mcloseBtn {
   .cardContainer {
     display: block;
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 920px;
+    height: 100%;
     background: #fff;
-    border: 1px solid #ebecf0;
+    top: 2%;
+    left: 15%;
+    bottom: 1%;
+    overflow-y: scroll;
+    margin-bottom: 100px;
+
+    /* overflow-y: scroll; */
+
+    /* z-index: 10; */
+
+
+    /* transform: translate(-70%, -70%);   */
+
+    /* border: 1px solid #ebecf0;
     box-shadow: 0 48px 48px rgba(37, 47, 137, 0.08);
     border-radius: 8px;
     z-index: 10;
-    background-color: rgb(248, 242, 242);
-    width: 920px;
-    height: 1083px;
+    background-color: rgb(248, 242, 242); */
+
+
+    /* overflow: auto; */
   }
 
   .closeBtn {
     display: block;
     cursor: pointer;
+    color: gray;
     font-size: 2.75rem;
     flex-direction: row;
     align-items: center;
@@ -1346,9 +1372,8 @@ span .mcloseBtn {
     width: 40px;
     height: 40px;
     right: 24px;
-    top: 30px;
+    top: 20px;
     background: #ebecf0;
-    mix-blend-mode: multiply;
     border-radius: 8px;
   }
 
@@ -1356,9 +1381,10 @@ span .mcloseBtn {
     display: block;
     width: 872px;
     height: 616px;
-    left: 24px;
-    margin-top: 78px;
-    padding: 24px 24px 0 24px;
+    padding-left: 24px;
+    padding-top: 78px;
+    padding-right: 24px;
+    background-attachment: fixed;
   }
 
   .popPrimaryText {
@@ -1404,7 +1430,7 @@ span .mcloseBtn {
   .descriptionParagraph {
     display: block;
     width: 876px;
-    height: 151px;
+    height: 150px;
     font-family: "Inter", sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -1422,12 +1448,12 @@ span .mcloseBtn {
     gap: 12px;
     width: 869px;
     height: 82px;
-    left: 26px;
-    top: 718px;
   }
 
   .seelive {
     display: block;
+    flex-direction: row;
+    align-items: center;
     width: 115px;
     height: 48px;
     background: #36b37e;
@@ -1435,7 +1461,6 @@ span .mcloseBtn {
     bottom: 24px;
     border: none;
     gap: 12px;
-    align-items: center;
     font-family: "Inter", sans-serif;
     font-style: normal;
     font-weight: 600;
@@ -1446,11 +1471,13 @@ span .mcloseBtn {
     color: #fff;
     background-image: url(image/Icon\ -\ Export.png);
     background-repeat: no-repeat;
-    background-position: right;
+    background-position: 94px;
+    background-size: 16px;
   }
 
   .seesource {
     display: block;
+    flex-direction: row;
     width: 141px;
     height: 48px;
     background: #36b37e;
@@ -1470,7 +1497,8 @@ span .mcloseBtn {
     color: #fff;
     background-image: url(image/VectorSource.png);
     background-repeat: no-repeat;
-    background-position: 115px;
+    background-position: 120px;
+    background-size: 16px;
   }
 
   .mcardContainer {
@@ -1500,20 +1528,4 @@ span .mcloseBtn {
   .mdescriptionParagraph {
     display: none;
   }
-}
-
-#overlay {
-  position: fixed;
-  opacity: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: #c1c7d0;
-  pointer-events: none;
-}
-
-#overlay.active {
-  opacity: 1;
-  pointer-events: all;
 }
